<resources>
    <string name="app_name">UBASurvey</string>

    <!-- Basic Information Screen Strings -->
    <string name="village_prompt">Choose a category</string>
    <string-array name="village_option">
        <item>Select Value</item>
        <item>Anjur</item>
        <item>Pattaravakkam</item>
        <item>Thenmelpakkam</item>
        <item>Orathur</item>
        <item>Nattarasampattu</item>

    </string-array>

    <string name="district_prompt">Choose a category</string>
    <string-array name="district_option">
        <item>Kancheepuram</item>
    </string-array>

    <string name="ward_number_prompt">Choose a category</string>
    <string-array name="ward_number_option">
        <item>Select Value</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>

    </string-array>

    <string name="GramPanachayat_prompt">Choose a category</string>
    <string-array name="GramPanachayat_option">
        <item>01</item>
        <item>02</item>
        <item>03</item>


    </string-array>

    <string name="Block_prompt">Choose a category</string>
    <string-array name="Block_option">
        <item>Select Value</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>


    </string-array>

    <string name="State_prompt">Choose a category</string>
    <string-array name="State_option">
        <item>TN</item>
    </string-array>

    <!-- Household Screen Strings -->
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_others">Others</string>


    <string name="radio_category_gen">Gen</string>
    <string name="radio_category_sc">SC</string>
    <string name="radio_category_st">ST</string>
    <string name="radio_category_obc">OBC</string>


    <string name="radio_poverty_status_apl">APL</string>
    <string name="radio_poverty_status_bpl">BPL</string>

    <string name="radio_ownhouse_yes">YES</string>
    <string name="radio_ownhouse_no">NO</string>


    <string name="radio_typeHouse_kutcha">Kutcha</string>
    <string name="radio_typeHouse_semipucca">Semi Pucca</string>
    <string name="radio_typeHouse_pucca">Pucca</string>
    <string name="radio_typeHouse_homeless">Homeless</string>


    <string name="radio_toilet_private">Private</string>
    <string name="radio_toilet_community">Community</string>
    <string name="radio_toilet_opendefecation">Open Defecation</string>


    <string name="radio_drainage_Covered">Covered</string>
    <string name="radio_drainage_Open">Open</string>
    <string name="radio_drainage_None">None</string>


    <string name="radio_waste_DoorStep">Door Step</string>
    <string name="radio_waste_CommonPoint">Common Point </string>
    <string name="radio_waste_NoCollectionSystem">No Collection System</string>


    <string name="radio_compost_Individual">Individual</string>
    <string name="radio_compost_Group">Group</string>
    <string name="radio_compost_None">None</string>

    <string name="radio_biogas_Individual">Individual</string>
    <string name="radio_biogas_Group">Group</string>
    <string name="radio_biogas_Community">Community</string>
    <string name="radio_biogas_None">None</string>

    <!-- Family Member Screen Strings -->

    <string name="radio_maritalStatus_NotMarried">NotMarried</string>
    <string name="radio_maritalStatus_Married">Married</string>
    <string name="radio_maritalStatus_Widowed">Widowed</string>
    <string name="radio_maritalStatus_Divorced_Separated">Divorced/Separated</string>

    <string name="levelOfEducation">Select</string>
    <string-array name="levelOfEducation_option">
        <item>Select Value</item>
        <item>Not Literate</item>
        <item>Literate</item>
        <item>Completed Class 5</item>
        <item> Class 8th</item>
        <item> Class 10th</item>
        <item> Class 12th</item>
        <item>ITI Diploma-</item>
        <item>Graduate</item>
        <item>Post Graduate/Professional</item>
    </string-array>


    <string name="awcSchoolCollege">Select</string>
    <string-array name="awcSchoolCollege_option">
        <item>Select Value</item>
        <item>Going to AWC</item>
        <item>School</item>
        <item>College</item>
        <item>Not Going</item>
        <item>Not Applicable</item>

    </string-array>

    <string name="radio_aadhaarCard_yes">YES</string>
    <string name="radio_aadhaarCard_no">NO</string>

    <string name="radio_BankAccount_yes">YES</string>
    <string name="radio_BankAccount_no">NO</string>

    <string name="radio_computerLiterate_yes">YES</string>
    <string name="radio_computerLiterate_no">NO</string>

    <string name="socialSecurityPension">Select</string>
    <string-array name="socialSecurityPension_option">
        <item>Select Value</item>
        <item>No Pension</item>
        <item>Old Age Pension</item>
        <item>Widow Pension</item>
        <item>Disability Pension</item>
        <item>Other Pension</item>
    </string-array>

    <string name="radio_mnregajobcard_yes">YES</string>
    <string name="radio_mnregajobcard_no">NO</string>

    <string name="occupationsCode">Select</string>
    <string-array name="occupationsCode_option">
        <item>Select Value</item>
        <item>Farming on own Land</item>
        <item>Sharecropping /Farming Leased Land</item>
        <item>Animal Husbandry</item>
        <item>Pisci-culture/Poultry</item>
        <item>Fishing</item>
        <item>Skilled Wage Worker</item>
        <item>Unskilled Wage Worker</item>
        <item>Salaried Employment in Government</item>
        <item>Salaried Employment in Private Sector</item>
        <item>Weaving</item>
        <item>Other Artisan (mention)</item>
        <item>Other Trade and Business</item>
    </string-array>

    <!-- Respondent`s Profile String-->

    <string name="radio_respondent_male">Male</string>
    <string name="radio_respondent_female">Female</string>
    <string name="radio_respondent_others">Others</string>

    <string name="identityCardType_prompt">Select</string>
    <string-array name="identityCardTypeSpinner_option">
        <item>Select Value</item>
        <item>Voters Id</item>
        <item>Driving License</item>
        <item>Aaadhar Card</item>
        <item>Pan Card</item>

    </string-array>


    <!-- Family Member Screen Strings -->

    <!--Migration Status Screen Strings -->

    <string name="radio_migrateForWork_yes">YES</string>
    <string name="radio_migrateForWork_no">NO</string>




 <!-- Source of Water Screen Strings -->
    <string name="radio_pipedWaterAtHome_yes">YES</string>
    <string name="radio_pipedWaterAtHome_no">NO</string>


    <string name="radio_communityWaterTap_yes">YES</string>
    <string name="radio_communityWaterTap_no">NO</string>

    <string name="radio_handpump_public">Public</string>
    <string name="radio_handpump_private">Private</string>


    <string name="radio_handpump_yes">YES</string>
    <string name="radio_handpump__no">NO</string>

    <string name="radio_openwell_public">Public</string>
    <string name="radio_openwell_private">Private</string>


    <string name="radio_openwell_yes">YES</string>
    <string name="radio_openwell_no">NO</string>

    <string name="radio_modewatersource_community">Public</string>
    <string name="radio_modewatersource_individual">Private</string>


    <string name="radio_livestock_kutcha">Kutcha</string>
    <string name="radio_livestock_pucca">Pucca</string>
    <string name="radio__livestock_open">Open</string>

    <!-- Agricultural Inputs Screen Strings-->


    <string name="radio_chemical_fertilizers_yes">YES</string>
    <string name="radio_chemical_fertilizers_no">NO</string>

    <string name="radio_chemical_insecticides_yes">YES</string>
    <string name="radio_chemical_insecticides_no">NO</string>

    <string name="radio_chemical_weedicide_yes">YES</string>
    <string name="radio_chemical_weedicide_no">NO</string>

    <string name="radio_chemical_organicmanure_yes">YES</string>
    <string name="radio_chemical_organicmanure_no">NO</string>

    <string name="irrigation_prompt">Select</string>
    <string-array name="irrigationSpinner_option">
    <item>Select Value</item>
    <item>Canal</item>
    <item>Borewell</item>
    <item>Tank</item>
    <item>River</item>
        <item>None</item>
        <item>Others</item>
    </string-array>

    <string name="irrigationSytem_prompt">Select</string>
    <string-array name="irrigationSystemSpinner_option">
        <item>Select Value</item>
        <item>Drip</item>
        <item>Sprinkler</item>
        <item>Flooding</item>
        <item>None</item>

    </string-array>
</resources>
