<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.srmist.ubasurvey.BasicInfoActivity"
    android:background="#fcfcfc">



    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/button_text_color"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context="srmactivities.nawin.com.myapplication.MenuActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="6dp"
                    app:cardCornerRadius="8dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView android:id="@+id/displayLabel"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:text="Basic Information"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="24dip"/>
                       <!-- <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="2dp"
                            android:background="#000000" />-->

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">


                <android.support.v7.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="6dp"
                    app:cardCornerRadius="8dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="Choose District:"
                            android:textColor="@android:color/darker_gray" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="#000000" />

                        <!-- Spinner Element -->
                        <Spinner
                            android:id="@+id/districtspinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:prompt="@string/district_prompt"
                            android:entries="@array/district_option"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">


                <android.support.v7.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:elevation="6dp"
                    app:cardCornerRadius="8dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="Choose Village:"
                            android:textColor="@android:color/darker_gray" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="#000000" />
                        <Spinner
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:id="@+id/villageSpinner"
                            android:prompt="@string/village_prompt"
                            android:entries="@array/village_option"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">


                <android.support.v7.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="Choose Ward No:"
                            android:textColor="@android:color/darker_gray" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="#000000" />
                        <Spinner
                            android:layout_gravity="center"
                            android:id="@+id/wardNoSpinner"
                            android:prompt="@string/ward_number_prompt"
                            android:entries="@array/ward_number_option"
                            android:layout_width="wrap_content"
                            android:padding="10dp"
                            android:layout_height="wrap_content"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">


                <android.support.v7.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="Choose Gram Panachayat:"
                            android:textColor="@android:color/darker_gray" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="#000000" />
                        <Spinner
                            android:layout_gravity="center"
                            android:id="@+id/GramPanachayatSpinner"
                            android:prompt="@string/GramPanachayat_prompt"
                            android:entries="@array/GramPanachayat_option"
                            android:layout_width="wrap_content"
                            android:padding="10dp"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="Choose Block:"
                            android:textColor="@android:color/darker_gray" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="#000000" />

                        <Spinner
                            android:id="@+id/BlockSpinner"
                            android:prompt="@string/Block_prompt"
                            android:entries="@array/Block_option"
                            android:layout_width="wrap_content"
                            android:padding="10dp"
                            android:layout_gravity="center"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">


                <android.support.v7.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="Choose State:"
                            android:textColor="@android:color/darker_gray" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="10dp"
                            android:background="#000000" />

                        <Spinner
                            android:layout_gravity="center"
                            android:id="@+id/StateSpinner"
                            android:prompt="@string/State_prompt"
                            android:entries="@array/State_option"
                            android:layout_width="wrap_content"
                            android:padding="10dp"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">


                <android.support.v7.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:elevation="6dp"
                    app:cardCornerRadius="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/basic_btn_submit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/button_bg"
                            android:textColor="@color/button_text_color"
                            android:text="Submit"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
